update-main_activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">EggSnaky</string>
+    <string name="kirakira_name">Brilliandroid</string>
+
+
+
 </resources>
