--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">EggSnaky</string>
-    <string name="kirakira_name">Brilliandroid</string>
+    <string name="main_text_name">main text</string>
 
 
 
